<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="addition">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="percentage">%</string>
    <string name="clear">C</string>
    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="back">Back</string>
    <string name="mode_change">Sci Mode</string>
    <string name="result">No Result</string>
    <string name="memory_clear">MC</string>
    <string name="memory_plus">M+</string>
    <string name="memory_minus">M-</string>
    <string name="memory_retrieve">MR</string>
</resources>